translation issue in exam transcript report pdf
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3455 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1958,6 +1958,8 @@ ar:
   exam_reports1: "Exam Reports1"
   archived_grouped_exam_reports: "Archived Grouped Exam Reports"
   is_final_exam: "Is Final Exam?"
+  retaken: "Retaken"
+  grouped_exam_reports_not_generated: "Grouped Exam Reports have not been generated for this Student."
 
   flash_msg1: "تحديث إضافية المجموعة الامتحان بنجاح."
   flash_msg2: "آسف"
