--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1960,6 +1960,8 @@ ja: # locale
   exam_reports1: "Exam Reports1"
   archived_grouped_exam_reports: "Archived Grouped Exam Reports"
   is_final_exam: "Is Final Exam?"
+  retaken: "Retaken"
+  grouped_exam_reports_not_generated: "Grouped Exam Reports have not been generated for this Student."
 
   flash_msg1: "追加試験グループのアップデートは成功しました。"
   flash_msg2: "申し訳ありません。"
