--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -1942,6 +1942,8 @@ pt: # locale
   exam_reports1: "Exam Reports1"
   archived_grouped_exam_reports: "Archived Grouped Exam Reports"
   is_final_exam: "Is Final Exam?"
+  retaken: "Retaken"
+  grouped_exam_reports_not_generated: "Grouped Exam Reports have not been generated for this Student."
 
   flash_msg1: "Grupo de exames adicionais atualizado com sucesso."
   flash_msg2: "Desculpe"
