--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1861,6 +1861,8 @@ ar:
   baseend_date_is_invalid: "تاريخ النهاية غير صالح"
   remove_entry_confirm: "إزالة دخول؟"
   should_not_be_admin: "لا ينبغي أن المسؤول"
+  edit_current_tte_confirm: "This timetable is currently in use. Please remove the attendance related to the class timings of removing timetable entries before editing if subject-wise attendance is in use."
+
 
   #exam updates
   ranking_levels_text: "Ranking Levels"
