--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1862,6 +1862,8 @@ de: # locale
   baseend_date_is_invalid: "Enddatum ist ungültig"
   remove_entry_confirm: "Eintrag löschen?"
   should_not_be_admin: "Should Not Be Admin"
+  edit_current_tte_confirm: "This timetable is currently in use. Please remove the attendance related to the class timings of removing timetable entries before editing if subject-wise attendance is in use."
+
 
   #exam updates
   ranking_levels_text: "Ranking Levels"
