--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1834,6 +1834,8 @@ hi:
   baseend_date_is_invalid: "समाप्ति तिथि अमान्य है"
   remove_entry_confirm: "प्रविष्टि निकालें?"
   should_not_be_admin: नहीं होना चाहिए "एडमिन"
+  edit_current_tte_confirm: "This timetable is currently in use. Please remove the attendance related to the class timings of removing timetable entries before editing if subject-wise attendance is in use."
+
 
  #exam updates
   ranking_levels_text: "Ranking Levels"
