--- a/config/locales/mr.yml
+++ b/config/locales/mr.yml
@@ -1852,6 +1852,8 @@ mr: # locale
   baseend_date_is_invalid: "End date is invalid"
   remove_entry_confirm: "Remove entry?"
   should_not_be_admin: "Should Not Be Admin"
+  edit_current_tte_confirm: "This timetable is currently in use. Please remove the attendance related to the class timings of removing timetable entries before editing if subject-wise attendance is in use."
+
 
   #exam updates
   ranking_levels_text: "Ranking Levels"
