--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -1859,6 +1859,8 @@ pt: # locale
   baseend_date_is_invalid: "A data final é inválido"
   remove_entry_confirm: "Remover entrada?"
   should_not_be_admin: "não deve ser Admin"
+  edit_current_tte_confirm: "This timetable is currently in use. Please remove the attendance related to the class timings of removing timetable entries before editing if subject-wise attendance is in use."
+
 
   #exam updates
   ranking_levels_text: "Níveis de classificação"
