changed universal date format (default) of fedena to yyyy-mm-dd
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3490 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -255,7 +255,7 @@ es: # locale
 
   date:
     formats:
-      default: "%e-%m-%Y"
+      default: "%Y-%m-%d"
       normal: "%B %e, %Y"
       short: "%e. %b"
       month_year: "%B %Y"
