--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -232,7 +232,7 @@ hi:
 
   date:
     formats:
-      default: "%e-%m-%Y"
+      default: "%Y-%m-%d"
       normal: "%B %e, %Y"
       short: "%e. %b"
       month_year: "%B %Y"
