--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -261,7 +261,7 @@ ar:
 
   date:
     formats:
-      default: "%e-%m-%Y"
+      default: "%Y-%m-%d"
       normal: "%B %e, %Y"
       short: "%e. %b"
       month_year: "%B %Y"
