FEATURE #3466 fixed (core)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3507 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -827,6 +827,7 @@ en: # locale
   school_college_phone: "School/College Phone"
   student_attendance_type: "Student Attendance Type"
   currency_type: "Currency Type"
+  default_country: "Default Country"
   college: "College"
   upload_logo: "Upload Logo"
   network_state: "Network State"
