fixed espanyol translation in dashboard[fixed #3510]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3602 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1232,7 +1232,7 @@ es: # locale
   role: "Rol"
   help: "Ayuda!"
   powered_by: "Desarrollado por"
-  manage_users: "Gestionar usuario"
+  manage_users: "Gestionar Usuarios"
   detailed_about_user: "Información de usuarios"
   edit_privilege_text: "Editar privilegio"
   faq: "Preguntas frecuentes"
@@ -1255,7 +1255,7 @@ es: # locale
   to_dashboard: "al Panel de Fedena"
   admission_link_title: "Ingresar información de admisión de estudiantes."
   student_link_title: "Buscar en los registros de estudiantes presentes y antiguos."
-  user_link_title:  "Gestionar usuarios"
+  user_link_title:  "Gestionar Usuarios"
   news_link_title: "Ver o publicar las últimas noticias y anuncios escolares"
   exam_link_title: "Ver Información de exámenes y resultados"
   timetable_link_title: "Módulo de gestión de horarios"
@@ -2347,7 +2347,7 @@ es: # locale
     view_liability: "Ver pasivos"
     tally_settings: "Configuración Tally"
     export_for_tally: "Exportar para Tally"
-    manage_users: "Gestionar usuarios"
+    manage_users: "Gestionar Usuarios"
     view_users: "Ver usuarios"
     add_users: "Agregar usuarios"
     timetable: "Horarios"
