fixed translation issues reminders/index [fixed #3508]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3610 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -892,6 +892,10 @@ ar:
   enter_subject: "الرجاء إدخال الرسالة والموضوع."
   back_to_inbox: "العودة إلى البريد الوارد"
   mark_as_unread: "علامة غير مقروء"
+  mark_as_read: "علامة النحو"
+  select_an_action: "تحديد إجراء"
+  previous_text: "السابق «"
+  next_text: "في المرة القادمة »"
   reminder_to_staff: "إنشاء تذكير للموظفين"
   reminder_to_student: "إنشاء تذكير الطالب"
   select_more_course: "بالطبع تحديد أكثر"
