--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -891,6 +891,10 @@ de: # locale
   enter_subject: "Bitte Nachricht und Betreff eingeben."
   back_to_inbox: "Zurück zum Posteingang"
   mark_as_unread: "Als ungelesen markieren"
+  mark_as_read: "markeren als gelezen"
+  select_an_action: "selecteer een actie"
+  previous_text: "« Vorige"
+  next_text: "Volgende »"
   reminder_to_staff: "Erinnerung für Angestellte erstellen"
   reminder_to_student: "Erinnerung für Schüler erstellen"
   select_more_course: "Weiteren Kurs auswählen"
