--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -865,6 +865,10 @@ hi:
   enter_subject: "संदेश और विषय दर्ज करें|"
   back_to_inbox: "पर वापस जाएँ इनबॉक्स के लिए"
   mark_as_unread: "अपठित के रूप में चिह्नित"
+  mark_as_read: "पठित के रूप में चिह्नित"
+  select_an_action: "एक कार्रवाई का चयन करें"
+  previous_text: "« पिछला"
+  next_text: "अगला »"
   reminder_to_staff: "कर्मचारियों के लिए अनुस्मारक बनाएँ"
   reminder_to_student: "छात्र के लिए अनुस्मारक बनाएँ"
   select_more_course: "अधिक पाठ्यक्रम का चयन करें"
