--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -724,8 +724,8 @@ ja: # locale
   exam_scheduling_not_done: "試験日程は確定されていません。"
   select_a_batch_to_continue: "バッチを選択して進む。"
   flash_student_notice: "該当バッチに生徒はいません。"
-  to: "To"
-  from: "From"
+  to: "へ"
+  from: "から"
   password: "パスワード"
   for_the_month: "該当月"
   select_salary_date: "給与日を選択"
@@ -895,6 +895,11 @@ ja: # locale
   enter_subject: "メッセージと表題を入力してください。"
   back_to_inbox: "受信箱に戻る"
   mark_as_unread: "未読にする"
+  mark_as_read: "既読にする"
+  select_an_action: "アクションを選択します"
+  previous_text: "« 前"
+  next_text: "次のページ »"
+  delete: "削除"
   reminder_to_staff: "スタッフ宛のリマインダを作成する。"
   reminder_to_student: "生徒宛のリマインダを作成する。"
   select_more_course: "コースを追加選択する。"
