--- a/config/locales/mr.yml
+++ b/config/locales/mr.yml
@@ -883,6 +883,10 @@ mr: # locale
   enter_subject: "कृपया संदेश व विषय प्रविष्ट करा."
   back_to_inbox: "परत इनबॉक्स"
   mark_as_unread: "Mark as unread"
+  mark_as_read: "Mark as read"
+  select_an_action: "Select an action"
+  previous_text: "&laquo; Previous"
+  next_text: "Next &raquo;"
   reminder_to_staff: "कर्माचारीसाठी स्मृतीपत्रक बनवा"
   reminder_to_student: "विद्यार्थीसाठी स्मृतीपत्रक बनवा"
   select_more_course: "आणखी अभ्यासक्रम निवडा"
