--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -889,6 +889,10 @@ pt: # locale
   enter_subject: "Por favor, digite a mensagem e o assunto."
   back_to_inbox: "Voltar à caixa de entrada"
   mark_as_unread: "Marcar como não lida"
+  mark_as_read: "Marca como lido"
+  select_an_action: "Selecione uma ação"
+  previous_text: "« Anterior"
+  next_text: "Próximo »"
   reminder_to_staff: "Criar lembrete para membros"
   reminder_to_student: "Criar lembrete para aluno"
   select_more_course: "Selecione mais curso"
