--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -889,6 +889,10 @@ es: # locale
   enter_subject: "Por favor ingrese el mensaje y el asunto."
   back_to_inbox: "Regresar a recibidos"
   mark_as_unread: "Marcar como no leído"
+  mark_as_read: "Marcar como leído"
+  select_an_action: "Seleccionar una acción"
+  previous_text: "« Anterior"
+  next_text: "Siguiente »"
   reminder_to_staff: "Crear recordatorio para el personal"
   reminder_to_student: "Crear recordatorio para el estudiante"
   select_more_course: "Seleccionar ms  cursos"
