bug fixes and a translation in timetable
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3630 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1852,7 +1852,8 @@ ar:
   basestart_date_overlap: "وقت البدء هو ضمن مجموعة من آخر جدول زمني"
   baseend_date_overlap: "وقت النهاية هو ضمن مجموعة من آخر جدول زمني"
   basestart_date_is_lower_than_today: "تاريخ البدء أقل من تاريخ اليوم"
-  basestart_date_is_lower_than_end_date: "تاريخ البدء أقل من تاريخ نهاية"
+  basestart_date_is_lower_than_end_date: "تاريخ انتهاء أقل من تاريخ بدء"
+  baseend_date_is_lower_than_end_date: "تاريخ انتهاء أقل من تاريخ اليوم"
   time_period:  "فترة"
   select_a_batch: "حدد دفعة"
   select_employee: "حدد الموظف"
