--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1853,7 +1853,8 @@ de: # locale
   basestart_date_overlap: "Startzeit ist im Bereich von einem anderen Zeitplan"
   baseend_date_overlap: "Ende der Zeit ist im Bereich von einem anderen Zeitplan"
   basestart_date_is_lower_than_today: "Startdatum ist niedriger als das heutige Datum"
-  basestart_date_is_lower_than_end_date: "Start Datum ist niedriger als Enddatum"
+  basestart_date_is_lower_than_end_date: "Enddatum ist niedriger als Startdatum"
+  baseend_date_is_lower_than_end_date: "Enddatum ist niedriger als das heutige Datum"
   time_period:  "Zeit"
   select_a_batch: "Wählen Sie eine Batch"
   select_employee: "Wählen Sie Mitarbeiter"
