--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1851,7 +1851,8 @@ es: # locale
   basestart_date_overlap: "La hora de inicio se superpone"
   baseend_date_overlap: "La hora final se superpone"
   basestart_date_is_lower_than_today: "La fecha inicial es anterior a hoy"
-  basestart_date_is_lower_than_end_date: "La fecha inicial es anterior a la fecha final."
+  basestart_date_is_lower_than_end_date: "Fecha de finalización es menor que la fecha de inicio"
+  baseend_date_is_lower_than_end_date: "Fecha de finalización es menor que la fecha de hoy"
   time_period:  "Período"
   select_a_batch: "Seleccionar un grupo"
   select_employee: "Seleccionar empleado"
