--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1825,7 +1825,8 @@ hi:
   basestart_date_overlap: "प्रारंभ समय एक और समय सारिणी की सीमा के भीतर है"
   baseend_date_overlap: "अंत समय एक और समय सारिणी की सीमा के भीतर है"
   basestart_date_is_lower_than_today: "प्रारंभ दिनांक आज की तारीख से कम है"
-  basestart_date_is_lower_than_end_date: "प्रारंभ दिनांक समाप्ति तिथि से कम है"
+  basestart_date_is_lower_than_end_date: "समाप्ति तिथि आरंभ तिथि से कम है"
+  baseend_date_is_lower_than_end_date: "समाप्ति तिथि आज की तारीख से कम है"
   time_period:  "अवधि"
   select_a_batch: "एक बैच का चयन करें"
   select_employee: "कर्मचारी चयन करें"
