--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -1850,7 +1850,8 @@ pt: # locale
   basestart_date_overlap: "Hora de início está dentro da faixa de um outro calendário"
   baseend_date_overlap: "término está dentro da faixa de um outro calendário"
   basestart_date_is_lower_than_today: "inicio é menor que a data de hoje"
-  basestart_date_is_lower_than_end_date: "A data é menor que a data final"
+  basestart_date_is_lower_than_end_date: "Data final é menor que a data inicial"
+  baseend_date_is_lower_than_end_date: "Data final é menor do que a data de hoje"
   time_period:  "Período"
   select_a_batch: "Selecione um grupo"
   select_employee: "Selecione empregado"
