student admission link added in flash message
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3662 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2189,7 +2189,8 @@ en: # locale
     flash13: "Successfully deleted!"
     flash14: "Sorry! Unable to delete when entries exists under the selected detail"
     flash15: "Sorry ! Could not delete student when dependent record exists"
-  
+    new_admission_link: "For new admission"
+
    ## traslation for finance controller
   finance:
     flash1: "Donation accepted"
