--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -2182,6 +2182,7 @@ ar:
     flash13: "حذف بنجاح!"
     flash14: "آسف! غير قادر على حذف عند مداخل موجود تحت التفصيل المحدد"
     flash15: "آسف! لا يمكن حذف سجل الطالب عندما تعتمد موجود"
+    new_admission_link: "For new admission"
 
    ## traslation for finance controller
   finance:
