employee admission link added in flash message
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3663 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -2121,6 +2121,7 @@ ar:
     flash2: "الفئة الرواتب المحدثة"
     flash3: "حذف بنجاح!"
     flash4: "غير قادر على حذف!"
+    new_admission_link: "For new admission"
 
 #employee_attendance translation
   employee_attendance:
