Bread crumbs added in settings pages
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3693 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -351,6 +351,7 @@ ar:
       errors_found: "تم العثور على الأخطاء التالية :"
 
   sl_no: "لا SL."
+  grouped_batches: "Grouped Batches"
   name: "اسم"
   adm_no: "ADM لا."
   view_profile: "عرض الملف الشخصي"
