--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -349,6 +349,7 @@ ja: # locale
       errors_found: "以下のエラーが発生しています。"
 
   sl_no: "Sl  番号"
+  grouped_batches: "Grouped Batches"
   name: "名称"
   adm_no: "Adm 番号"
   view_profile: "プロフィールビュー"
