--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -349,6 +349,10 @@ en: # locale
       errors_found: "Following errors were found"
 
   sl_no: "Sl  no."
+  system_settings: "System Settings"
+  administration_operations: "Administration / Operations"
+  student_management: "Student Management"
+  social_other_activity: "Social / Other Activity"
   grouped_batches: "Grouped Batches"
   name: "Name"
   adm_no: "Adm no."
