restriction created while sending email to students and guardians with no email id [fixed #3590]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3767 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -2188,6 +2188,7 @@ ar:
     flash13: "حذف بنجاح!"
     flash14: "آسف! غير قادر على حذف عند مداخل موجود تحت التفصيل المحدد"
     flash15: "آسف! لا يمكن حذف سجل الطالب عندما تعتمد موجود"
+    flash20: "المستخدم ليس لديه هوية البريد الالكتروني!"
     new_admission_link: "For new admission"
 
    ## traslation for finance controller
