--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2195,6 +2195,7 @@ en: # locale
     flash13: "Successfully deleted!"
     flash14: "Sorry! Unable to delete when entries exists under the selected detail"
     flash15: "Sorry ! Could not delete student when dependent record exists"
+    flash20: "User does not have an email id!"
     new_admission_link: "For new admission"
 
    ## traslation for finance controller
