--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2171,6 +2171,7 @@ ja: # locale
     flash17: "ユーザーアカウントが作成されました! "
     flash18: "パスワードのリセットのリンクがメールされました。"
     flash19: "このユーザー名は存在しません。"
+    flash20: "ユーザーが電子メールIDを持っていません！"
 
 #student controller translation
   student:
@@ -2189,6 +2190,7 @@ ja: # locale
     flash13: "削除は成功しました!"
     flash14: "申し訳ありません。選択されたフィールドに入力がある場合は削除出来ません。"
     flash15: "申し訳ありません。扶養のある生徒の場合削除出来ません。"
+    flash20: "ユーザーが電子メールIDを持っていません！"
     new_admission_link: "新規生徒用"
 
    ## traslation for finance controller
