--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -2167,6 +2167,7 @@ pt: # locale
     flash17: "Conta de Usuário criado! "
     flash18: "Link desfazendo a sua senha foi enviado ao teu email"
     flash19: "Nao existe utilizador com este Usuário"
+    flash20: "O usuário não tem um ID de e-mail!"
 
 #student controller translation
   student:
