--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -349,6 +349,7 @@ de: # locale
       errors_found: "Folgende Fehler wurden gefunden"
 
   sl_no: "Sl Nr."
+  are_you_sure_to_trnsfer: "All the students will be transferred to the batch"
   system_settings: "System Settings"
   administration_operations: "Administration / Operations"
   student_management: "Student Management"
