--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -349,6 +349,7 @@ pt: # locale
       errors_found: "Os Seguintes erros foram encontrados"
 
   sl_no: "Sl  no."
+  are_you_sure_to_trnsfer: "All the students will be transferred to the batch"
   system_settings: "System Settings"
   administration_operations: "Administration / Operations"
   student_management: "Student Management"
