--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -351,6 +351,7 @@ ar:
       errors_found: "تم العثور على الأخطاء التالية :"
 
   sl_no: "لا SL."
+  are_you_sure_to_trnsfer: "All the students will be transferred to the batch"
   system_settings: "System Settings"
   administration_operations: "Administration / Operations"
   student_management: "Student Management"
