--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -321,6 +321,7 @@ hi:
       errors_found: "निम्नलिखित त्रुटियाँ पाए गए"
 
   sl_no: "कोई क्रम|"
+  are_you_sure_to_trnsfer: "All the students will be transferred to the batch"
   system_settings: "System Settings"
   administration_operations: "Administration / Operations"
   student_management: "Student Management"
