--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -349,6 +349,7 @@ ja: # locale
       errors_found: "以下のエラーが発生しています。"
 
   sl_no: "Sl 番号"
+  are_you_sure_to_trnsfer: "All the students will be transferred to the batch"
   system_settings: "System Settings"
   administration_operations: "Administration / Operations"
   student_management: "Student Management"
