handled invalid authenticity token exception
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3805 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -2015,6 +2015,7 @@ ar:
   flash_msg40: "تعيين جميع الطلاب بنجاح"
   flash_msg41: "إزالة الطلاب بنجاح"
   flash_msg42: "إزالة جميع الطلاب بنجاح"
+  flash_msg43: "Invalid Submission. Please try again."
 
 #configuration controller translation
   configuration:
