employee cant take class to multiple batches at a time, fixes #3660
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3906 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -440,6 +440,8 @@ ar:
   teacher: "معلم"
   total_average: "مجموع متوسط"
   continue: "تواصل"
+  override: "Override"
+  retain_all: "Retain All"
   email: "البريد الإلكتروني"
   web_address: "العنوان على شبكة الإنترنت"
   jan: "يان"
