--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -438,6 +438,8 @@ de: # locale
   teacher: "Leher"
   total_average: "Gesamtdurchschnitt"
   continue: "Fortfahren"
+  override: "Override"
+  retain_all: "Retain All"
   email: "E-Mail"
   web_address: "Web-Addresse"
   jan: "Jan"
