--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -438,6 +438,8 @@ pt: # locale
   teacher: "Professor/a"
   total_average: "Média Total"
   continue: "Continuar"
+  override: "Override"
+  retain_all: "Retain All"
   email: "Email"
   web_address: "Endereço Web"
   jan: "Jan"
