added link to logs page in sms flash message, fixes #3673
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3910 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1216,7 +1216,7 @@ en: # locale
   settings: "Settings"
   sms_sending_failed_with_response: "SMS sending failed with response "
   sms_configuration_not_found: "SMS configuration file not found."
-  sms_sending_intiated: "'SMS sending initiated successfully. <a href='%{log_url}'>Click here</a> for further details"
+  sms_sending_intiated: "'SMS sending initiated successfully. <a href='%{log_url}'>Click here</a> to view log."
   sms_settings_page: "SMS Settings page"
   send_sms_to_students: "Send SMS to Students"
   sms_to_batches: "Send SMS to Batches"
