overlapped entries to be shown in teachers timetable
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3915 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1867,6 +1867,7 @@ es: # locale
   baseend_date_is_invalid: "La fecha final no es válida"
   remove_entry_confirm: "¿Eliminar entrada?"
   should_not_be_admin: " no debe ser administrador"
+  multiple_entries: "Multiple entries"
 
   #exam updates
   ranking_levels_text: "Niveles de Ranking"
