--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1876,6 +1876,7 @@ de: # locale
   remove_entry_confirm: "Eintrag löschen?"
   should_not_be_admin: "Should Not Be Admin"
   edit_current_tte_confirm: "This timetable is currently in use. Please remove the attendance related to the class timings of removing timetable entries before editing if subject-wise attendance is in use."
+  multiple_entries: "Multiple entries"
 
 
   #exam updates
