--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1848,6 +1848,7 @@ hi:
   remove_entry_confirm: "प्रविष्टि निकालें?"
   should_not_be_admin: नहीं होना चाहिए "एडमिन"
   edit_current_tte_confirm: "This timetable is currently in use. Please remove the attendance related to the class timings of removing timetable entries before editing if subject-wise attendance is in use."
+  multiple_entries: "Multiple entries"
 
 
  #exam updates
