--- a/config/locales/mr.yml
+++ b/config/locales/mr.yml
@@ -1866,6 +1866,7 @@ mr: # locale
   remove_entry_confirm: "Remove entry?"
   should_not_be_admin: "Should Not Be Admin"
   edit_current_tte_confirm: "This timetable is currently in use. Please remove the attendance related to the class timings of removing timetable entries before editing if subject-wise attendance is in use."
+  multiple_entries: "Multiple entries"
 
 
   #exam updates
