--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -1874,6 +1874,7 @@ pt: # locale
   remove_entry_confirm: "Remover entrada?"
   should_not_be_admin: "não deve ser Admin"
   edit_current_tte_confirm: "This timetable is currently in use. Please remove the attendance related to the class timings of removing timetable entries before editing if subject-wise attendance is in use."
+  multiple_entries: "Multiple entries"
 
 
   #exam updates
